@@ -1,5 +1,6 @@
 201X-XX-XX  UnNetHack X.X.X
 	* Quest leaders can smash rocks when angry (from SporkHack)
+	* Blackmarket shopkeeper can smash rocks when angry
 	* user interface improvements:
 	  - Monster Targeting v1.2 (by Pasi Kallinen)
 	  - Changed 'C' to present a menu (from NAO)
